--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="utf-8">
     <title>Scotland 2023</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant&family=Crimson+Text&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
   </head>
   <body>
+  <div class="top-container">
     <h1>Scotland 2023</h1>
+    <h2>An epic adventure of whisky, tartans, and maybe haggis</h2>
+    <img class="lochness-img" src="images/IMG_8426.jpg" alt="Loch Ness 2019" width=400px height=300px>
+  </div>
+  <hr>
+  <div class="middle-container">
+    <div class="itinerary">
+      <h2>Trip Itinerary</h2>
+      <div class="country-row">
+        <img class="bigben-img" src="images/big-ben.png" alt="big ben icon">
+        <h3>England</h3>
+        <p>TBD Date</p>
+        <!-- Need to add attribute to site: <a href="https://www.flaticon.com/free-icons/london" title="london icons">London icons created by xnimrodx - Flaticon</a> -->
+      </div>
+      <div class="country-row">
+        <img class="mountain-img" src="images/mountain.png" alt="mountain">
+        <!-- Need to add attribute to site <a href="https://www.flaticon.com/free-icons/goal" title="goal icons">Goal icons created by xnimrodx - Flaticon</a> -->
+        <h3>Scotland</h3>
+        <p>TBD Date</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you want to see Scotland's beauty as much as I do.</h3>
+      <p class= "contact-message">Want to start planning for an epic adventure.</p>
+      <a class="btn" href="mailto:echan4@bu.edu">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://freeicons.io/icon-list/travel-1/">Icons</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copyright">© 2022 Elaine Chan</p>
+  </div>
   </body>
 </html>
